# traversal_ws

./: README.md
.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/autopilot/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/catkin_simple/: .catkin  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
devel/.private/debugger/: .catkin  local_setup.sh  setup.sh
devel/.private/eigen_catkin/: .catkin  local_setup.sh
devel/.private/flexible_environment/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/force_sensor/: .catkin
devel/.private/gazebo_joint_torsional_spring/: .catkin  .rosinstall  setup.sh
devel/.private/glog_catkin/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/manual_flight_assistant/: .catkin  .rosinstall  setup.sh
devel/.private/mav_comm/: .catkin
devel/.private/mav_msgs/: .catkin  .rosinstall  local_setup.sh
devel/.private/mav_planning_msgs/: .catkin  .rosinstall
devel/.private/mav_state_machine_msgs/: .catkin  .rosinstall
devel/.private/mav_system_msgs/: .catkin
devel/.private/mpc/: .catkin  setup.sh
devel/.private/polynomial_trajectories/: .catkin  .rosinstall
devel/.private/position_controller/: .catkin  .rosinstall
devel/.private/position_impedance_control/: .catkin  .rosinstall
devel/.private/quad_launch_files/: .catkin
devel/.private/quadrotor_common/: .catkin  .rosinstall
devel/.private/quadrotor_msgs/: .catkin  setup.sh
devel/.private/rotors_comm/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rotors_control/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rotors_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rotors_evaluation/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rotors_gazebo_plugins/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rotors_hil_interface/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rotors_joy_interface/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rpg_quadrotor_integration_test/: .catkin  local_setup.sh  setup.sh
devel/.private/rpg_rotors_interface/: .catkin  .rosinstall  local_setup.sh
devel/.private/rpg_single_board_io/: .catkin
devel/.private/rqt_quad_gui/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rqt_rotors/: .catkin
devel/.private/sbus_bridge/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/state_predictor/: .catkin  .rosinstall  local_setup.sh
devel/.private/trajectory_generation_helper/: .catkin  local_setup.sh  setup.sh
devel/.private/trajectory_generator/: .catkin
devel/.private/vbat_thrust_calibration/: .catkin  local_setup.sh  setup.sh
devel/include/force_sensor/: resetBias.h  resetBiasRequest.h  resetBiasResponse.h
devel/include/mav_msgs/: Actuators.h  AttitudeThrust.h  FilteredSensorData.h  GpsWaypoint.h  RateThrust.h  RollPitchYawrateThrust.h  Status.h  TorqueThrust.h
devel/include/mav_planning_msgs/: ChangeNameService.h  ChangeNameServiceRequest.h  ChangeNameServiceResponse.h  PlannerService.h  PlannerServiceRequest.h  PlannerServiceResponse.h  Point2D.h  PointCloudWithPose.h  (+10 more)
logs/mpc/: build.make.000.log.stderr  build.make.004.log.stderr
src/rpg_quadrotor_control/: README.md
src/rpg_quadrotor_control/force_sensor/: CMakeLists.txt  package.xml
src/rpg_quadrotor_control/force_sensor/include/: force_filter.h
src/rpg_quadrotor_control/force_sensor/parameters/: parameters.yaml
src/rpg_quadrotor_control/force_sensor/src/: force_filter.cpp
src/rpg_quadrotor_control/force_sensor/srv/: resetBias.srv
src/rpg_quadrotor_control/mpc/: CMakeLists.txt  package.xml
src/rpg_quadrotor_control/mpc/include/: mpc_controller.h  mpc_params.h  mpc_wrapper.h
src/rpg_quadrotor_control/mpc/launch/: general.launch  mpc_controller.launch
src/rpg_quadrotor_control/mpc/model/: CMakeLists.txt  mpc_impedance_codegen  mpc_impedance_codegen.cpp
src/rpg_quadrotor_control/mpc/model/configuration/: boundaries.json  final_position.json  general_setup.json  reference_cartesian.json  splines.json  weights.json
src/rpg_quadrotor_control/mpc/model/include/: auxiliary_functions.h
src/rpg_quadrotor_control/mpc/model/mpc_impedance_based_codegen/: README.md  acado_common.h  acado_integrator.c  acado_solver.c  mpc_drone.txt  test  test.cpp  visualizing_test_results.m
src/rpg_quadrotor_control/mpc/msg/: MpcLog.msg
src/rpg_quadrotor_control/mpc/parameters/: default.yaml
src/rpg_quadrotor_control/mpc/plotjuggler_template/: visualize_pos_attitude.xml
src/rpg_quadrotor_control/mpc/src/: autopilot_mpc_instance.cpp  mpc_controller.cpp  mpc_node.cpp  mpc_wrapper.cpp
src/rpg_quadrotor_control/position_impedance_control/: CMakeLists.txt
src/rpg_quadrotor_control/position_impedance_control/include/position_impedance_control/: controller.h
src/rpg_quadrotor_control/position_impedance_control/parameters/: impedance_controller_params.yaml
src/rpg_quadrotor_control/position_impedance_control/src/: autopilot_impedance_instance.cpp
src/rpg_quadrotor_control/simulation/flexible_environment/: CMakeLists.txt
src/rpg_quadrotor_control/simulation/flexible_environment/launch/: environment.launch  multi_environment.launch  only_window.launch  rviz.launch  spawn_nano17.launch  test.launch
src/rpg_quadrotor_control/simulation/flexible_environment/rviz/: default_config.rviz
src/rpg_quadrotor_control/simulation/flexible_environment/urdf/: deformable_door.xacro  flexible_door.xacro  flexible_door_multi.xacro  flexible_environment.xacro  flexible_window.gazebo  flexible_window.xacro  flexible_window_multi.gazebo
src/trajectory_generator/: CMakeLists.txt
src/trajectory_generator/include/: trajectory_gen.h
src/trajectory_generator/launch/: example_traj.launch
src/trajectory_generator/parameters/: traj.yaml
src/trajectory_generator/src/: trajectory_gen.cpp
(+614 files in other folders)
